fixed card spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
 .forecast-block {
     width: 18%;
 }
+
+.margin-0 {
+    margin: 0;
+}
